fixes pull request

--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                             </div>
                         </div>
                         <div class="skins-list">
-                                <div class="skins-list__item">
+                                <div class="skins-list__item item">
                                     <div class="item__info">
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             <i class="fa fa-lock"></i>
                                             2 дня
                                         </div>
@@ -147,16 +147,16 @@
                                         <span><i class="fa fa-cart-plus"></i>В корзину</span>
                                     </button>
                                 </div>
-                                <div class="skins-list__item">
+                                <div class="skins-list__item item">
                                     <div class="item__info">
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             <i class="fa fa-lock"></i>
                                             13 Часов
                                         </div>
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             FT
                                         </div>
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             0.3157
                                         </div>
                                     </div>
@@ -171,16 +171,16 @@
                                         <span><i class="fa fa-cart-plus"></i>В корзину</span>
                                     </button>
                                 </div>
-                                <div class="skins-list__item">
+                                <div class="skins-list__item item">
                                     <div class="item__info">
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             <i class="fa fa-lock"></i>
                                             13 Часов
                                         </div>
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             FT
                                         </div>
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             0.3699
                                         </div>
                                     </div>
@@ -195,9 +195,9 @@
                                         <span><i class="fa fa-cart-plus"></i>В корзину</span>
                                     </button>
                                 </div>
-                                <div class="skins-list__item">
+                                <div class="skins-list__item item">
                                     <div class="item__info">
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             <i class="fa fa-lock"></i>
                                             5 дней
                                         </div>
@@ -213,16 +213,16 @@
                                         <span><i class="fa fa-cart-plus"></i>В корзину</span>
                                     </button>
                                 </div>
-                                <div class="skins-list__item">
+                                <div class="skins-list__item item">
                                     <div class="item__info">
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             <i class="fa fa-lock"></i>
                                             13 Часов
                                         </div>
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             FT
                                         </div>
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             0.3438
                                         </div>
                                     </div>
@@ -237,16 +237,16 @@
                                         <span><i class="fa fa-cart-plus"></i>В корзину</span>
                                     </button>
                                 </div>
-                                <div class="skins-list__item">
+                                <div class="skins-list__item item">
                                     <div class="item__info">
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             <i class="fa fa-lock"></i>
                                             13 Часов
                                         </div>
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             FT
                                         </div>
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             0.2450
                                         </div>
                                     </div>
@@ -261,16 +261,16 @@
                                         <span><i class="fa fa-cart-plus"></i>В корзину</span>
                                     </button>
                                 </div>
-                                <div class="skins-list__item">
+                                <div class="skins-list__item item">
                                     <div class="item__info">
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             <i class="fa fa-lock"></i>
                                             13 Часов
                                         </div>
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             FT
                                         </div>
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             0.1931
                                         </div>
                                     </div>
@@ -285,16 +285,16 @@
                                         <span><i class="fa fa-cart-plus"></i>В корзину</span>
                                     </button>
                                 </div>
-                                <div class="skins-list__item">
+                                <div class="skins-list__item item">
                                     <div class="item__info">
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             <i class="fa fa-lock"></i>
                                             13 Часов
                                         </div>
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             FT
                                         </div>
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             0.1761
                                         </div>
                                     </div>
@@ -309,7 +309,7 @@
                                         <span><i class="fa fa-cart-plus"></i>В корзину</span>
                                     </button>
                                 </div>
-                                <div class="skins-list__item">
+                                <div class="skins-list__item item">
                                     <div class="item__info">
                                     </div>
                                     <img src="/img/skins/9.png" alt="item" class="item__img">
@@ -323,16 +323,16 @@
                                         <span><i class="fa fa-cart-plus"></i>В корзину</span>
                                     </button>
                                 </div>
-                                <div class="skins-list__item">
+                                <div class="skins-list__item item">
                                     <div class="item__info">
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             <i class="fa fa-lock"></i>
                                             13 Часов
                                         </div>
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             FT
                                         </div>
-                                        <div class="skin-info">
+                                        <div class="item__skin-info">
                                             0.2305
                                         </div>
                                     </div>
